# gfx-sandbox

./: Cargo.toml
resources/shaders/: interpolate.wgsl  uv.wgsl
src/: app.rs  main.rs  mesh.rs  pipeline.rs  texture.rs  vertex.rs
